# observatorio-rr-coleta

./: .env.example  .gitignore  CLAUDE.md  LICENSE  MEMORY.md  README.md  pyproject.toml
fontes/: mprr.py  tjrr.py
infra/: com.observatoriorr.jornal.plist
scripts/: acervo_busca.py  auditar_historico.py  backfill.py  backfill_indexacao.py  backfill_publicacao.py  backfill_sidecars.py  baixar_pdf.py  cache_texto.py  classificar.py  cliente_anthropic.py  coletar.py  config.py  despublicar_emergencia.py  despublicar_lote.py  extrair_texto.py  filtrar.py  indexar_diaria.py  jornal_diario.py  medir_supressao.py  migrar_dominio.py  pdf_para_markdown.py  publicar.py  r2_client.py  renderizar.py  rodar_jornal.sh  segmentar.py  sidecar.py  sidecar_backfill.py  validador_sensivel.py
search/: README.md  docker-compose.yml
search/api/: Dockerfile  pyproject.toml
search/api/app/: classificador.py  config.py  db.py  filtro_sensivel.py  limites.py  main.py  rotas_buscar.py  rotas_eventos.py  rotas_health.py  rotas_indexar.py  rotas_leads.py  sessao.py  solr.py  telefone.py
search/api/tests/: conftest.py  test_buscar.py  test_classificador.py  test_eventos.py  test_filtro_sensivel.py  test_health.py  test_indexar.py  test_leads.py  test_sessao.py
tests/: test_acervo_busca.py  test_auditar_historico.py  test_backfill.py  test_backfill_indexacao.py  test_backfill_orquestracao.py  test_backfill_publicacao.py  test_backfill_sidecars.py  test_baixar_pdf.py  test_cache_texto.py  test_classificar.py  test_cliente_anthropic.py  test_coletar.py  test_coletar_orquestracao.py  (+19 more)
(+5908 files in other folders)
