[project]
name = "observatorio-rr-coleta"
version = "0.1.0"
description = "Coletor de diários oficiais de Roraima (MPRR, TJRR) — Observatório Roraima"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "beautifulsoup4",
    "boto3",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "ruff",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
