[project]
name = "observatorio-rr-busca"
version = "0.1.0"
description = "API de busca textual nos diários do Observatório Roraima"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "requests",
    "psycopg[binary]>=3.2",
    "itsdangerous>=2.2",
    "slowapi>=0.1.9",
    "pydantic[email]>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "httpx",
    "ruff",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
